[package]
name = "llm_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
metal = ["candle-core/metal", "candle-nn/metal"]
cuda = ["candle-core/cuda", "candle-nn/cuda", "candle-transformers/cuda", "dep:bindgen_cuda"]


[build-dependencies]
anyhow = { version = "1", features = ["backtrace"] }
bindgen_cuda = { version = "0.1.4", optional = true }

[dependencies]
silent = { version = "1.0.9", features = ["multipart", "sse"] }

# base
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full"] }
chrono = { version = "0.4.34", features = ["serde"] }
tokio-stream = { version = "0.1.14", features = ["net"] }
toml = "0.8.10"
derive_builder = "0.20.0"
uuid = { version = "1.7.0", features = ["v4"] }
futures-util = "0.3.30"
regex = "1.10.3"
serde_json = "1.0.114"


# whisper
#candle-core = { version = "0.3.3" }
#candle-nn = { version = "0.3.3" }
#candle-transformers = { version = "0.3.3" }
candle-core = { git = "https://github.com/hubertshelley/candle" }
candle-nn = { git = "https://github.com/hubertshelley/candle" }
candle-transformers = { git = "https://github.com/hubertshelley/candle" }
byteorder = "1.5.0"
tokenizers = { version = "0.15.2", features = ["onig"] }
rand = "0.8.5"
symphonia = { version = "0.5.3", features = ["all"] }
